# ROS2-FastBEV

./: README.md
install/: local_setup.sh  setup.sh
install/camera_sim_pub/share/camera_sim_pub/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/my_fastbev/share/ament_index/resource_index/package_run_dependencies/: my_fastbev
install/my_fastbev/share/ament_index/resource_index/parent_prefix_path/: my_fastbev
install/my_fastbev/share/my_fastbev/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
src/: run_fastbev_node.sh
src/camera_sim_pub/: package.xml  setup.cfg  setup.py
src/camera_sim_pub/camera_sim_pub/: multi_cam_pub.py
src/fastbev_trt_ros/: CMakeLists.txt
src/fastbev_trt_ros/src/: fastbev_node.cpp
src/install/: local_setup.sh  setup.sh
src/install/camera_sim_pub/lib/camera_sim_pub/: multi_cam_pub
src/install/fastbev_trt_ros/share/fastbev_trt_ros/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
src/install/my_fastbev/lib/my_fastbev/: fastbev_node
src/install/my_fastbev/share/my_fastbev/: local_setup.sh
src/install/my_fastbev/share/my_fastbev/cmake/: my_fastbevConfig.cmake
